# djangoProjectavito

./: db.sqlite3  pyproject.toml  reform.py
ads/: models.py  serializers.py  views.py
ads/fixture/: reform.py
ads/migrations/: 0001_initial.py
avito/: settings.py  urls.py
fixture/: ads.json
