[tool.poetry]
name = "djangoprojectavito"
version = "0.1.0"
description = ""
authors = ["MariaAltysheva <altysheva_maria@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
